start to analyze

--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1440, 10)\n"
+     ]
+    }
+   ],
    "source": [
-    "data = pd.read_csv('anime.csv')"
+    "data = pd.read_csv('anime.csv')\n",
+    "print(data.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -45,11 +63,14 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Page</th>\n",
        "      <th>Rus_name</th>\n",
        "      <th>Eng_name</th>\n",
        "      <th>Href</th>\n",
        "      <th>Genres</th>\n",
+       "      <th>Rating</th>\n",
        "      <th>Description</th>\n",
+       "      <th>Imgs</th>\n",
        "      <th>Studios</th>\n",
        "      <th>Minor_names</th>\n",
        "    </tr>\n",
@@ -57,120 +78,80 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>Стальной алхимик: Братство смотреть онлайн</td>\n",
        "      <td>Hagane no Renkinjutsushi (2009) / FMA (2009) с...</td>\n",
        "      <td>/catalog/hagane-no-renkinjutsushi-2009-2400</td>\n",
        "      <td>['Экшен', 'Военное', 'Приключения', 'Комедия',...</td>\n",
+       "      <td>9.2</td>\n",
        "      <td>['Описание анимеРемейк одноимённого аниме-сери...</td>\n",
+       "      <td>/posters/2400.10127424713.jpg</td>\n",
        "      <td>['/anime/studios/4-bones']</td>\n",
        "      <td>Стальной алхимик: Братство / Hagane no Renkinj...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Атака титанов: Финал смотреть онлайн</td>\n",
        "      <td>Shingeki no Kyojin: The Final Season смотреть ...</td>\n",
        "      <td>/catalog/anime-21166</td>\n",
        "      <td>[]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>[]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>[]</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>1</td>\n",
        "      <td>Врата Штейна смотреть онлайн</td>\n",
        "      <td>Steins;Gate смотреть онлайн</td>\n",
        "      <td>/catalog/steins-gate-914</td>\n",
        "      <td>['Фантастика', 'Триллер']</td>\n",
+       "      <td>9.1</td>\n",
        "      <td>['Описание анимеДействие сериала происходит ле...</td>\n",
+       "      <td>/posters/914.11477207553.jpg</td>\n",
        "      <td>['/anime/studios/314-white-fox']</td>\n",
        "      <td>Врата Штейна / シュタインズ・ゲート / Steins Gate / シュタイ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>1</td>\n",
        "      <td>Атака титанов 3. Часть 2 сезон смотреть онлайн</td>\n",
        "      <td>Shingeki no Kyojin Season 3 Part 2 / SnK3.5 см...</td>\n",
        "      <td>/catalog/anime-19608</td>\n",
        "      <td>[]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>[]</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>[]</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>1</td>\n",
        "      <td>Гинтама 4 сезон смотреть онлайн</td>\n",
        "      <td>Gintama° смотреть онлайн</td>\n",
        "      <td>/catalog/gintama-9815</td>\n",
        "      <td>['Экшен', 'Комедия', 'Исторический', 'Пародия'...</td>\n",
+       "      <td>9.1</td>\n",
        "      <td>['Описание анимеНикто этого уже не ждал и не н...</td>\n",
+       "      <td>/posters/9815.35700322133.jpg</td>\n",
        "      <td>['/anime/studios/1258-bandai-namco-pictures']</td>\n",
        "      <td>Gintama° / Гинтама 4 / Gintama (2015) / 銀魂゜ / ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Охотник х Охотник (2011) смотреть онлайн</td>\n",
-       "      <td>Hunter x Hunter (2011) смотреть онлайн</td>\n",
-       "      <td>/catalog/hunter-x-hunter-2011-4023</td>\n",
-       "      <td>['Экшен', 'Приключения', 'Сёнен', 'Супер сила'...</td>\n",
-       "      <td>['Описание анимеРемейк аниме-сериала «Охотник ...</td>\n",
-       "      <td>['/anime/studios/11-madhouse-studios']</td>\n",
-       "      <td>Hunter x Hunter (2011) / Охотник х Охотник (20...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Гинтама 2 сезон смотреть онлайн</td>\n",
-       "      <td>Gintama' смотреть онлайн</td>\n",
-       "      <td>/catalog/gintama-216</td>\n",
-       "      <td>['Экшен', 'Комедия', 'Исторический', 'Пародия'...</td>\n",
-       "      <td>['Описание анимеНад древним Эдо, которым прави...</td>\n",
-       "      <td>['/anime/studios/14-sunrise']</td>\n",
-       "      <td>Гинтама 2 / Gintama' / Gintama` / 銀魂´ / Gintam...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Легенда о героях Галактики смотреть онлайн</td>\n",
-       "      <td>Ginga Eiyuu Densetsu смотреть онлайн</td>\n",
-       "      <td>/catalog/ginga-eiyuu-densetsu-1016</td>\n",
-       "      <td>['Драма', 'Фантастика', 'Космос', 'Военное']</td>\n",
-       "      <td>['Описание анимеДесятилетиями Галактическая Им...</td>\n",
-       "      <td>['/anime/studios/8-artland', '/anime/studios/2...</td>\n",
-       "      <td>Ginga Eiyuu Densetsu / Легенда о героях Галакт...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Гинтама 3 сезон смотреть онлайн</td>\n",
-       "      <td>Gintama': Enchousen смотреть онлайн</td>\n",
-       "      <td>/catalog/gintama-enchousen-8813</td>\n",
-       "      <td>['Экшен', 'Комедия', 'Исторический', 'Пародия'...</td>\n",
-       "      <td>['Описание анимеТретье пришествие знаменитой т...</td>\n",
-       "      <td>['/anime/studios/14-sunrise']</td>\n",
-       "      <td>Gintama': Enchousen / Гинтама 3 / Gintama` (20...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Форма голоса смотреть онлайн</td>\n",
-       "      <td>Koe no Katachi смотреть онлайн</td>\n",
-       "      <td>/catalog/koe-no-katachi-9399</td>\n",
-       "      <td>['Драма', 'Школа', 'Сёнен']</td>\n",
-       "      <td>['Описание анимеПодобно миру взрослых, мир дет...</td>\n",
-       "      <td>['/anime/studios/2-kyoto-animation']</td>\n",
-       "      <td>Koe no Katachi / Форма голоса / Eiga Koe no Ka...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         Rus_name  \\\n",
-       "0      Стальной алхимик: Братство смотреть онлайн   \n",
-       "1            Атака титанов: Финал смотреть онлайн   \n",
-       "2                    Врата Штейна смотреть онлайн   \n",
-       "3  Атака титанов 3. Часть 2 сезон смотреть онлайн   \n",
-       "4                 Гинтама 4 сезон смотреть онлайн   \n",
-       "5        Охотник х Охотник (2011) смотреть онлайн   \n",
-       "6                 Гинтама 2 сезон смотреть онлайн   \n",
-       "7      Легенда о героях Галактики смотреть онлайн   \n",
-       "8                 Гинтама 3 сезон смотреть онлайн   \n",
-       "9                    Форма голоса смотреть онлайн   \n",
+       "   Page                                        Rus_name  \\\n",
+       "0     1      Стальной алхимик: Братство смотреть онлайн   \n",
+       "1     1            Атака титанов: Финал смотреть онлайн   \n",
+       "2     1                    Врата Штейна смотреть онлайн   \n",
+       "3     1  Атака титанов 3. Часть 2 сезон смотреть онлайн   \n",
+       "4     1                 Гинтама 4 сезон смотреть онлайн   \n",
        "\n",
        "                                            Eng_name  \\\n",
        "0  Hagane no Renkinjutsushi (2009) / FMA (2009) с...   \n",
@@ -178,11 +159,6 @@
        "2                        Steins;Gate смотреть онлайн   \n",
        "3  Shingeki no Kyojin Season 3 Part 2 / SnK3.5 см...   \n",
        "4                           Gintama° смотреть онлайн   \n",
-       "5             Hunter x Hunter (2011) смотреть онлайн   \n",
-       "6                           Gintama' смотреть онлайн   \n",
-       "7               Ginga Eiyuu Densetsu смотреть онлайн   \n",
-       "8                Gintama': Enchousen смотреть онлайн   \n",
-       "9                     Koe no Katachi смотреть онлайн   \n",
        "\n",
        "                                          Href  \\\n",
        "0  /catalog/hagane-no-renkinjutsushi-2009-2400   \n",
@@ -190,23 +166,13 @@
        "2                     /catalog/steins-gate-914   \n",
        "3                         /catalog/anime-19608   \n",
        "4                        /catalog/gintama-9815   \n",
-       "5           /catalog/hunter-x-hunter-2011-4023   \n",
-       "6                         /catalog/gintama-216   \n",
-       "7           /catalog/ginga-eiyuu-densetsu-1016   \n",
-       "8              /catalog/gintama-enchousen-8813   \n",
-       "9                 /catalog/koe-no-katachi-9399   \n",
        "\n",
-       "                                              Genres  \\\n",
-       "0  ['Экшен', 'Военное', 'Приключения', 'Комедия',...   \n",
-       "1                                                 []   \n",
-       "2                          ['Фантастика', 'Триллер']   \n",
-       "3                                                 []   \n",
-       "4  ['Экшен', 'Комедия', 'Исторический', 'Пародия'...   \n",
-       "5  ['Экшен', 'Приключения', 'Сёнен', 'Супер сила'...   \n",
-       "6  ['Экшен', 'Комедия', 'Исторический', 'Пародия'...   \n",
-       "7       ['Драма', 'Фантастика', 'Космос', 'Военное']   \n",
-       "8  ['Экшен', 'Комедия', 'Исторический', 'Пародия'...   \n",
-       "9                        ['Драма', 'Школа', 'Сёнен']   \n",
+       "                                              Genres  Rating  \\\n",
+       "0  ['Экшен', 'Военное', 'Приключения', 'Комедия',...     9.2   \n",
+       "1                                                 []     NaN   \n",
+       "2                          ['Фантастика', 'Триллер']     9.1   \n",
+       "3                                                 []     NaN   \n",
+       "4  ['Экшен', 'Комедия', 'Исторический', 'Пародия'...     9.1   \n",
        "\n",
        "                                         Description  \\\n",
        "0  ['Описание анимеРемейк одноимённого аниме-сери...   \n",
@@ -214,45 +180,101 @@
        "2  ['Описание анимеДействие сериала происходит ле...   \n",
        "3                                                 []   \n",
        "4  ['Описание анимеНикто этого уже не ждал и не н...   \n",
-       "5  ['Описание анимеРемейк аниме-сериала «Охотник ...   \n",
-       "6  ['Описание анимеНад древним Эдо, которым прави...   \n",
-       "7  ['Описание анимеДесятилетиями Галактическая Им...   \n",
-       "8  ['Описание анимеТретье пришествие знаменитой т...   \n",
-       "9  ['Описание анимеПодобно миру взрослых, мир дет...   \n",
        "\n",
-       "                                             Studios  \\\n",
-       "0                         ['/anime/studios/4-bones']   \n",
-       "1                                                 []   \n",
-       "2                   ['/anime/studios/314-white-fox']   \n",
-       "3                                                 []   \n",
-       "4      ['/anime/studios/1258-bandai-namco-pictures']   \n",
-       "5             ['/anime/studios/11-madhouse-studios']   \n",
-       "6                      ['/anime/studios/14-sunrise']   \n",
-       "7  ['/anime/studios/8-artland', '/anime/studios/2...   \n",
-       "8                      ['/anime/studios/14-sunrise']   \n",
-       "9               ['/anime/studios/2-kyoto-animation']   \n",
+       "                            Imgs  \\\n",
+       "0  /posters/2400.10127424713.jpg   \n",
+       "1                            NaN   \n",
+       "2   /posters/914.11477207553.jpg   \n",
+       "3                            NaN   \n",
+       "4  /posters/9815.35700322133.jpg   \n",
+       "\n",
+       "                                         Studios  \\\n",
+       "0                     ['/anime/studios/4-bones']   \n",
+       "1                                             []   \n",
+       "2               ['/anime/studios/314-white-fox']   \n",
+       "3                                             []   \n",
+       "4  ['/anime/studios/1258-bandai-namco-pictures']   \n",
        "\n",
        "                                         Minor_names  \n",
        "0  Стальной алхимик: Братство / Hagane no Renkinj...  \n",
        "1                                                NaN  \n",
        "2  Врата Штейна / シュタインズ・ゲート / Steins Gate / シュタイ...  \n",
        "3                                                NaN  \n",
-       "4  Gintama° / Гинтама 4 / Gintama (2015) / 銀魂゜ / ...  \n",
-       "5  Hunter x Hunter (2011) / Охотник х Охотник (20...  \n",
-       "6  Гинтама 2 / Gintama' / Gintama` / 銀魂´ / Gintam...  \n",
-       "7  Ginga Eiyuu Densetsu / Легенда о героях Галакт...  \n",
-       "8  Gintama': Enchousen / Гинтама 3 / Gintama` (20...  \n",
-       "9  Koe no Katachi / Форма голоса / Eiga Koe no Ka...  "
+       "4  Gintama° / Гинтама 4 / Gintama (2015) / 銀魂゜ / ...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head(10)"
+    "data.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Необходимые изменения данных\n",
+    "\n",
+    " - Восстановить рейтинг аниме по его соседям и переписать все записи с нерабочими ссылками в отдельную таблицу      \n",
+    " - Удалить \"смотреть онлайн\" после названия и \"Описание аниме\" перед описанием\n",
+    " - Постараться выделить в отдельный столбец информацию о годе выпуска аниме по одному из названий \n",
+    " - Постараться добавить столбец с номером сезона(нужно больше информации о формате)\n",
+    " - Из нескольких английских названий оставить только одно, остальные добавить к альтернативным\n",
+    " - Т.к. описаний может быть максимум 2: добавить доп.столбец для описания и разделить информацию из описаний на 2 столбца\n",
+    " - Из ссылки на студию выделить только название(после номера и дефиса)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
