Changed comma split to semicolon

--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -239,12 +239,12 @@
     "    last_sentence = data['Additional'][i][-2]\n",
     "\n",
     "    last_sentence = last_sentence.replace(\" Ещё вы можете посмотреть другие аниме от студии \",\"\")\n",
-    "    last_sentence = last_sentence.replace(\" или другие аниме в \",\",\")\n",
-    "    last_sentence = last_sentence.replace(\" сезоне \",\",\")\n",
+    "    last_sentence = last_sentence.replace(\" или другие аниме в \",\";\")\n",
+    "    last_sentence = last_sentence.replace(\" сезоне \",\";\")\n",
     "    last_sentence = last_sentence.replace(\" года\",\"\")\n",
-    "    last_sentence = last_sentence.split(',')\n",
+    "    last_sentence = last_sentence.split(';')\n",
     "\n",
-    "    #здесь может быть больше 3х параметров! ОШИБКА\n",
+    "    #проверить что ; работает правильно\n",
     "    data['Studio'][i] = last_sentence[0]\n",
     "    data['Season'][i] = last_sentence[1]\n",
     "    data['Year'][i] = last_sentence[2]\n",
