visualized some parts

--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "0  На этой странице вы можете посмотреть аниме Ha...  "
       ]
      },
-     "execution_count": 165,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'На этой странице вы можете посмотреть аниме Hagane no Renkinjutsushi (2009) онлайн и в хорошем качестве. Для начала просмотра выберите серию (см. выше). После выбора серии можно выбрать перевод (русская озвучка или субтитры). Если вам понравилось аниме Стальной алхимик: Братство, то советуем обратить внимание на жанры экшен, военное, приключения, а также комедия, драма, магия, фэнтези, сёнен. Ещё вы можете посмотреть другие аниме от студии Bones или другие аниме в весеннем сезоне 2009 года.'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['Additional'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,14 +214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-167-6f1536713bb4>:11: SettingWithCopyWarning: \n",
+      "<ipython-input-36-cdeef7b15cba>:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -211,22 +231,22 @@
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  self._setitem_with_indexer(indexer, value)\n",
-      "<ipython-input-167-6f1536713bb4>:12: SettingWithCopyWarning: \n",
+      "<ipython-input-36-cdeef7b15cba>:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data['Season'][i] = last_sentence[1]\n",
-      "<ipython-input-167-6f1536713bb4>:13: SettingWithCopyWarning: \n",
+      "<ipython-input-36-cdeef7b15cba>:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data['Year'][i] = last_sentence[2]\n",
-      "<ipython-input-167-6f1536713bb4>:32: SettingWithCopyWarning: \n",
+      "<ipython-input-36-cdeef7b15cba>:32: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data['Seria_name'][i] = result_name\n",
-      "<ipython-input-167-6f1536713bb4>:33: SettingWithCopyWarning: \n",
+      "<ipython-input-36-cdeef7b15cba>:33: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -272,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,214 +320,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Page</th>\n",
-       "      <th>Rus_name</th>\n",
-       "      <th>Eng_name</th>\n",
-       "      <th>Href</th>\n",
-       "      <th>Genres</th>\n",
-       "      <th>Rating</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Alt_description</th>\n",
-       "      <th>Img</th>\n",
-       "      <th>Minor_names</th>\n",
-       "      <th>Studio</th>\n",
-       "      <th>Season</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Season_name</th>\n",
-       "      <th>Seria_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Стальной алхимик: Братство</td>\n",
-       "      <td>Hagane no Renkinjutsushi (2009) / FMA (2009)</td>\n",
-       "      <td>/catalog/hagane-no-renkinjutsushi-2009-2400</td>\n",
-       "      <td>['Экшен', 'Военное', 'Приключения', 'Комедия',...</td>\n",
-       "      <td>9.2</td>\n",
-       "      <td>Ремейк одноимённого аниме-сериала «Стальной ал...</td>\n",
-       "      <td>Нарушив главный запрет Алхимии и попытавшись в...</td>\n",
-       "      <td>/posters/2400.10127424713.jpg</td>\n",
-       "      <td>['Стальной алхимик: Братство ', ' Hagane no Re...</td>\n",
-       "      <td>Bones</td>\n",
-       "      <td>весеннем</td>\n",
-       "      <td>2009.0</td>\n",
-       "      <td>Братство</td>\n",
-       "      <td>Стальной алхимик</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Врата Штейна</td>\n",
-       "      <td>Steins;Gate</td>\n",
-       "      <td>/catalog/steins-gate-914</td>\n",
-       "      <td>['Фантастика', 'Триллер']</td>\n",
-       "      <td>9.1</td>\n",
-       "      <td>Действие сериала происходит летом 2010 года в ...</td>\n",
-       "      <td>Акихабара – интереснейшее место, где обитают с...</td>\n",
-       "      <td>/posters/914.11477207553.jpg</td>\n",
-       "      <td>['Врата Штейна ', ' シュタインズ・ゲート ', ' Steins Gat...</td>\n",
-       "      <td>White Fox</td>\n",
-       "      <td>весеннем</td>\n",
-       "      <td>2011.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Врата Штейна</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Гинтама 4 сезон</td>\n",
-       "      <td>Gintama°</td>\n",
-       "      <td>/catalog/gintama-9815</td>\n",
-       "      <td>['Экшен', 'Комедия', 'Исторический', 'Пародия'...</td>\n",
-       "      <td>9.1</td>\n",
-       "      <td>Никто этого уже не ждал и не надеялся, но...\\n...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>/posters/9815.35700322133.jpg</td>\n",
-       "      <td>['Gintama° ', ' Гинтама 4 ', ' Gintama (2015) ...</td>\n",
-       "      <td>Bandai Namco Pictures</td>\n",
-       "      <td>весеннем</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Гинтама</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Охотник х Охотник (2011)</td>\n",
-       "      <td>Hunter x Hunter (2011)</td>\n",
-       "      <td>/catalog/hunter-x-hunter-2011-4023</td>\n",
-       "      <td>['Экшен', 'Приключения', 'Сёнен', 'Супер сила'...</td>\n",
-       "      <td>9.1</td>\n",
-       "      <td>Ремейк аниме-сериала «Охотник х Охотник» 1999 ...</td>\n",
-       "      <td>Жизнь в этой реальности устроена, как обычно –...</td>\n",
-       "      <td>/posters/4023.9592776303.jpg</td>\n",
-       "      <td>['Hunter x Hunter (2011) ', ' Охотник х Охотни...</td>\n",
-       "      <td>Madhouse Studios</td>\n",
-       "      <td>осеннем</td>\n",
-       "      <td>2011.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Охотник х Охотник (2011)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Гинтама 2 сезон</td>\n",
-       "      <td>Gintama'</td>\n",
-       "      <td>/catalog/gintama-216</td>\n",
-       "      <td>['Экшен', 'Комедия', 'Исторический', 'Пародия'...</td>\n",
-       "      <td>9.1</td>\n",
-       "      <td>Над древним Эдо, которым правит марионеточный ...</td>\n",
-       "      <td>Продолжение приключений Гинтоки и его команды ...</td>\n",
-       "      <td>/posters/216.40890160023.jpg</td>\n",
-       "      <td>['Гинтама 2 ', \" Gintama' \", ' Gintama` ', ' 銀...</td>\n",
-       "      <td>Sunrise</td>\n",
-       "      <td>весеннем</td>\n",
-       "      <td>2011.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Гинтама</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Page                     Rus_name  \\\n",
-       "0     1  Стальной алхимик: Братство    \n",
-       "1     1                Врата Штейна    \n",
-       "2     1             Гинтама 4 сезон    \n",
-       "3     1    Охотник х Охотник (2011)    \n",
-       "4     1             Гинтама 2 сезон    \n",
-       "\n",
-       "                                        Eng_name  \\\n",
-       "0  Hagane no Renkinjutsushi (2009) / FMA (2009)    \n",
-       "1                                   Steins;Gate    \n",
-       "2                                      Gintama°    \n",
-       "3                        Hunter x Hunter (2011)    \n",
-       "4                                      Gintama'    \n",
-       "\n",
-       "                                          Href  \\\n",
-       "0  /catalog/hagane-no-renkinjutsushi-2009-2400   \n",
-       "1                     /catalog/steins-gate-914   \n",
-       "2                        /catalog/gintama-9815   \n",
-       "3           /catalog/hunter-x-hunter-2011-4023   \n",
-       "4                         /catalog/gintama-216   \n",
-       "\n",
-       "                                              Genres  Rating  \\\n",
-       "0  ['Экшен', 'Военное', 'Приключения', 'Комедия',...     9.2   \n",
-       "1                          ['Фантастика', 'Триллер']     9.1   \n",
-       "2  ['Экшен', 'Комедия', 'Исторический', 'Пародия'...     9.1   \n",
-       "3  ['Экшен', 'Приключения', 'Сёнен', 'Супер сила'...     9.1   \n",
-       "4  ['Экшен', 'Комедия', 'Исторический', 'Пародия'...     9.1   \n",
-       "\n",
-       "                                         Description  \\\n",
-       "0  Ремейк одноимённого аниме-сериала «Стальной ал...   \n",
-       "1  Действие сериала происходит летом 2010 года в ...   \n",
-       "2  Никто этого уже не ждал и не надеялся, но...\\n...   \n",
-       "3  Ремейк аниме-сериала «Охотник х Охотник» 1999 ...   \n",
-       "4  Над древним Эдо, которым правит марионеточный ...   \n",
-       "\n",
-       "                                     Alt_description  \\\n",
-       "0  Нарушив главный запрет Алхимии и попытавшись в...   \n",
-       "1  Акихабара – интереснейшее место, где обитают с...   \n",
-       "2                                                NaN   \n",
-       "3  Жизнь в этой реальности устроена, как обычно –...   \n",
-       "4  Продолжение приключений Гинтоки и его команды ...   \n",
-       "\n",
-       "                             Img  \\\n",
-       "0  /posters/2400.10127424713.jpg   \n",
-       "1   /posters/914.11477207553.jpg   \n",
-       "2  /posters/9815.35700322133.jpg   \n",
-       "3   /posters/4023.9592776303.jpg   \n",
-       "4   /posters/216.40890160023.jpg   \n",
-       "\n",
-       "                                         Minor_names                 Studio  \\\n",
-       "0  ['Стальной алхимик: Братство ', ' Hagane no Re...                  Bones   \n",
-       "1  ['Врата Штейна ', ' シュタインズ・ゲート ', ' Steins Gat...              White Fox   \n",
-       "2  ['Gintama° ', ' Гинтама 4 ', ' Gintama (2015) ...  Bandai Namco Pictures   \n",
-       "3  ['Hunter x Hunter (2011) ', ' Охотник х Охотни...       Madhouse Studios   \n",
-       "4  ['Гинтама 2 ', \" Gintama' \", ' Gintama` ', ' 銀...                Sunrise   \n",
-       "\n",
-       "     Season    Year Season_name                 Seria_name  \n",
-       "0  весеннем  2009.0   Братство            Стальной алхимик  \n",
-       "1  весеннем  2011.0         NaN              Врата Штейна   \n",
-       "2  весеннем  2015.0           4                   Гинтама   \n",
-       "3   осеннем  2011.0         NaN  Охотник х Охотник (2011)   \n",
-       "4  весеннем  2011.0           2                   Гинтама   "
+       "1989.0"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head()"
+    "data.Year[5]"
    ]
   },
   {
